--- a/src/css/style-chern-can.css
+++ b/src/css/style-chern-can.css
@@ -1,39 +1,66 @@
-.ame {
-    font-size: 22px;
+body {
+    font-family: Arial, sans-serif;
+    margin: 0;
+    padding: 0;
+}
+.ame-par {
+    font-size: 38px;
     color: #263244;
     margin: 40px;
     text-transform: uppercase;
 }
 
+
+
 .block-can {
+    perspective: 1px;
+    overflow-x: hidden;
+    overflow-y: auto;
     text-align: center;
-    padding: 60px;
-    width: 100%;
-    height: 500px;
-    background: url(../img/fon2.png) 100% 0/auto 90% no-repeat;
-    background-size: cover;
+    display: block;
+    height: 60vh;
 }
-.can {
+.parallax-can {  
+    transform-style: preserve-3d;
 }
+.can-fon {
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    margin-top: 5%;
+    -webkit-transform: translateZ(-2px) scale(3);
+    transform: translateZ(-2px) scale(3);
+    text-align: center;
+    z-index: -1;
+    background: url(../img/fon2.png) 100% 100%/cover no-repeat;
+}
+
+.can-text {
+    font-size: 30px;
+    padding-top: 5%;
+    -webkit-transform: translateZ(-1px) scale(1.4);
+    transform: translateZ(-1px) scale(1.4);
+}
+
 .can li{
     display: inline-block;
-    width: 250px;
-    margin: 30px 20px;
+    width: 370px;
+    margin-top: 20px; 
 }
 .usl {
-    font-size: 14px;
-    font-weight: 900;
+    font-size: 28px;
     margin: 10px;
     color: #d17e10;
-    
 }
 .usl-p {
-    margin: 20px;
-    color: #3f495a;
-    
+    margin: 10px;
+    font-size: 20px;
+    color: #3f495a; 
 }
 .usl-img {
-    width: 50px;
+    width: 80px;
     height: auto;
     margin: 10px;
 }
