--- a/src/css/style-chern-case.css
+++ b/src/css/style-chern-case.css
@@ -1,9 +1,11 @@
+body {
+    font-family: Arial, sans-serif;
+}
 .ame {
     font-size: 22px;
     color: #263244;
     margin: 40px;
     text-transform: uppercase;
-    font-weight: bold;
 }
 
 
