--- a/src/css/style-chern-contact.css
+++ b/src/css/style-chern-contact.css
@@ -1,3 +1,14 @@
+body {
+    font-family: Arial, sans-serif;
+}
+.ame {
+    font-size: 22px;
+    color: #263244;
+    margin: 40px;
+    text-transform: uppercase;
+}
+
+
 .block-contacts {
     width: 100%;
     margin: 30px 0;
