--- a/src/css/style-chern-otziv.css
+++ b/src/css/style-chern-otziv.css
@@ -1,3 +1,6 @@
+body {
+    font-family: Arial, sans-serif;
+}
 .ame {
     font-size: 22px;
     color: #263244;
@@ -5,7 +8,8 @@
     text-transform: uppercase;
 }
 
-.block-ot {
+
+.block-otziv {
     margin: 110px;
     text-align: center;
 }
