--- a/src/css-bt/style-bt.css
+++ b/src/css-bt/style-bt.css
@@ -1,8 +1,5 @@
 body {
     font-family: Arial, sans-serif;
-    margin: 0;
-    padding: 0;
-    background: #fefefe;
 }
 .ame {
     font-size: 22px;
@@ -11,100 +8,17 @@ body {
     text-transform: uppercase;
 }
 
-                                        /* loader */
 
-.block-loader {
-    z-index: 1001;
-    width: 100vw;
-    position: fixed;
-    height: 100vh;
-    background: linear-gradient(#eec, #eeb);
-    -webkit-animation: loader-page 5s forwards;
-    -o-animation: loader-page 5s forwards;
-    animation: loader-page 5s forwards;
-}
-
-.loader-page {
-    position: fixed;
-    left: 42%;
-    top: 35%;
-    display: block;
-    -webkit-animation: it 1.5s infinite linear;
-    -o-animation: it 1.5s infinite linear;
-    animation: it 1.5s infinite linear;
-}
-
-.rows {
-    display: inline-block;
-}
-.loader-item {
-    margin: 40px 20px;
-    width: 50px;
-    height: 50px;
-}
-.item-1 {
-    border-top: 10px solid black;
-    border-left: 10px solid black;
-    border-top-left-radius: 100%;
-}
-.item-2 {
-    border-top: 10px solid black;
-    border-right: 10px solid black;
-    border-top-right-radius: 100%;
-}
-.item-3 {
-    border-bottom: 10px solid black;
-    border-left: 10px solid black;
-    border-bottom-left-radius: 100%;
-}
-.item-4 {
-    border-bottom: 10px solid black;
-    border-right: 10px solid black;
-    border-bottom-right-radius: 100%;
-}
-
-@keyframes it{
-    0% {
-        transform: rotate(0deg);
-    }
-    100% {
-        transform: rotate(360deg);
-    }
-}
-@keyframes loader-page{
-    0% {
-        opacity: 1;
-    }
-    75% {
-        opacity: 0;
-    }
-    100% {
-        z-index: -100;
-        opacity: 0;
-    }
-}
-
-.text-loader {
-    position: fixed;
-    top: 49%;
-    left: 45%;
-}
-
-
-                                    /* block-header */
 
 .block-header {
     background-color: #344051;
     height: 61px;
     width: 100%;
     color: #ffffff;
-    position: fixed;
-    z-index: 1;
+    position: absolute;
 }
 .ab {
-    font-size: 22px;
-    width: 50%;
-    text-align: center;
+    font-size: 20px;
     line-height: 60px;
     float: left;
     -webkit-animation: ab-anim 5s;
@@ -112,37 +26,34 @@ body {
     animation: ab-anim 5s;
 }
 .menu {
-    padding-left: 40px;
     float: left;
 }
 .menu li {
     text-transform: uppercase;
-    font-size: 18px;
-    padding: 0 12px;
+    font-size: 14px;
     float: left;
     line-height: 60px;
     -webkit-animation: m-li-anim 1s forwards;
     -o-animation: m-li-anim 1s forwards;
     animation: m-li-anim 1s forwards;
-    opacity: 0;
+    opacity: 0; 
 }
 
 .menu li a {
-    transition: all 0.2s;
-    transform: scale(1);
+    transform: all 0.2s;     /* время выполнения */
+    transform: scale(1);     /* увелечение размера */
     display: inline-block;
     color: white;
 }
-.menu li a:visited {
+.menu li a:visited {         /* первоначальное значение */
     color: white;
 }
-.menu li a:hover {
+.menu li a:hover {           /* значение при наведении */
     color: #cf7600;
 }
-.menu li a:active {
+.menu li a:active {          /* значение при активации*/
     transform: scale(1.05);
 }
-
 .menu li:nth-child(1) {
     animation-delay: 1.3s;
 }
@@ -172,7 +83,7 @@ body {
 }
 @keyframes m-li-anim{
     from {
-        margin-top: -10px;
+        margin-top: -50px;
         opacity: 0;
     }
     to {
@@ -180,20 +91,21 @@ body {
         opacity: 1;
     }
 }
+.navig {
+    line-height: 60px;
+}
 
                                     /* block-s */
 
 .block-s {
+    align-items: center;
     width: 100%;
-    max-width: 2000px;
-    height: 100%;
-    max-height: 1000px;
-    background: url(../img/boy.png) 90% 100%/auto 90% no-repeat, url(../img/fon1.png) center/cover no-repeat;
+    background: url(../img/boy.png) 70% 100%/auto 90% no-repeat, url(../img/fon1.png) center/cover no-repeat;
 }
 .shap {
+    padding-top: 100px;
     text-align: center;
-    margin: 260px 0 0 280px;
-    float: left;
+    width: 100%;
     -webkit-animation: shap-anim 3s ease forwards;
     -o-animation: shap-anim 3s ease forwards;
     animation: shap-anim 3s ease forwards;
@@ -203,21 +115,21 @@ body {
 .shap h2 {
     font-size: 51px;
     font-weight: bold;
-    padding: 15px;
+    padding: 3%;
     color: #2c384a;
 }
 .shap h6 {
-    padding: 22px;
+    padding: 2%;
     font-size: 15px;
     color: #79818d;
 }
 .bt1 {
     border: 2px solid #6d7682;
     border-radius: 5px;
-    margin: 15px;
+    margin: 3%;
     font-size: 15px;
     color: #6d7682;
-    padding: 15px;
+    padding: 10px;
     background: none;
 }
 
@@ -239,7 +151,7 @@ body {
         opacity: 0;
     }
     to {
-        margin-left: 280px;
+        margin-left: 0;
         opacity: 1;
     }
 }
@@ -247,20 +159,20 @@ body {
                                     /* block-me */
 
 .block-me {
-    margin: 110px;
+    width: 100%;
     text-align: center;
 }
 .phBm {
     width: 150px;
     height: 150px;
     border-radius: 50%;
-    margin: 20px;
+    margin-top: 20px;
     filter: grayscale(100%);
 }
 .pBm {
     font-size: 12px;
     color: #3f495a;
-    margin: 20px 30%;
+    margin: 20px 0;
     text-align: justify;
 }
 .buBm {
@@ -286,61 +198,47 @@ body {
                                     /* block-can */
 
 .ame-can {
-    font-size: 38px;
+    font-size: 22px;
     color: #263244;
-    margin: 40px;
+    margin: 20px;
     text-transform: uppercase;
+    
 }
 
 .block-can {
-    perspective: 1px;
-    overflow-x: hidden;
-    overflow-y: auto;
     text-align: center;
     display: block;
-    height: 60vh;
+    height: 500px;
+    background: url(../img/fon2.png) 100% 100%/cover no-repeat;
 }
 .parallax-can {  /* */
-    transform-style: preserve-3d;
+    
 }
-.can-fon {
-    position: absolute;
-    left: 0;
-    right: 0;
-    top: 0;
-    bottom: 0;
-    margin-top: 5%;
-    -webkit-transform: translateZ(-2px) scale(3);
-    transform: translateZ(-2px) scale(3);
-    text-align: center;
-    z-index: -1;
-    background: url(../img/fon2.png) 100% 100%/cover no-repeat;
+.can {
+    display: flex;
+    
 }
 
 .podclass {
-    font-size: 30px;
+    font-size: 26px;
     padding-top: 5%;
-    -webkit-transform: translateZ(-1px) scale(1.4);
-    transform: translateZ(-1px) scale(1.4);
 }
 
-.can li{
-    display: inline-block;
-    width: 370px;
-    margin-top: 20px; 
+.can li {
+    margin-right: 40px; 
 }
 .usl {
-    font-size: 28px;
+    font-size: 20px;
     margin: 10px;
     color: #d17e10;
 }
 .usl-p {
     margin: 10px;
-    font-size: 20px;
+    font-size: 15px;
     color: #3f495a; 
 }
 .usl-img {
-    width: 80px;
+    width: 40px;
     height: auto;
     margin: 10px;
 }
@@ -348,8 +246,7 @@ body {
                                     /* block-case */
 
 .block-case {
-    width: 1100px;
-    margin: 70px 250px;
+    margin: 70px 0;
 }
 .zagl-case {
     text-align: center;
@@ -361,12 +258,10 @@ case-p {
     margin: 15px;
 }
 .w-cPh {
-    margin: 15px 100px 15px 0;
     float: left;
 }
 .c-w0 {
     float: left;
-    margin: 10px 100px 10px 0;
 }
 .c-w {
     margin: 10px 70px 15px 0;
@@ -436,9 +331,6 @@ case-p {
 
 .block-col {
     text-align: center;
-    margin: 850px 440px 150px 440px;
-    width: 100%;
-    max-width: 720px;
 }
 .zag-col {
     text-align: center;
@@ -451,7 +343,7 @@ case-p {
     text-align: left;
 }
 .tda {
-    font-size: 19;
+    font-size: 19px;
     color: #1c2534;
     margin: 30px 0 10px 0;
     font-weight: bold;
@@ -487,7 +379,6 @@ case-p {
 .block-stat {
     text-align: center;
     padding: 60px;
-    width: 100%;
     height: 500px;
     perspective: 1px;
     overflow-x: hidden;
@@ -526,13 +417,17 @@ case-p {
     margin: 40px;
     text-transform: uppercase;
 }
+
 .stat-text img{
     transform: scale(1.4);
 }
+.stat-sp {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 20px;
+}
 .stat-sp li{
     display: inline-block;
-    width: 250px;
-    margin: 30px 50px;
 }
 .sred {
     font-size: 26px;
@@ -541,6 +436,8 @@ case-p {
     color: #323e4f;
 }
 .sred-d {
+    font-size: 20px;
+    font-weight: 500;
     margin: 11px;
     color: #323e4f;
     
@@ -554,8 +451,10 @@ case-p {
                                     /* block-otziv */
 
 .block-otziv {
-    margin: 110px;
+    margin-top: 50px;
     text-align: center;
+    display: flex;
+    justify-content: center;
 }
 .otziv-img {
     width: 100px;
@@ -566,7 +465,6 @@ case-p {
 .otziv-p {
     font-size: 12px;
     color: #3f495a;
-    margin: 20px 450px;
 }
 
                                     /* block-contacts */
@@ -586,23 +484,30 @@ case-p {
 }
 .contacts-p {
     font-size: 12px;
-    padding: 20px 450px;
+}
+.svayz {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
 }
 .svyaz li{
     display: inline-block;
-    width: 160px;
-    margin: 30px 20px;
+    margin-top: 10px;
 }
 .sv-li {
-    margin: 11px;
+    margin: 10px
+}
+.name-bar {
+    display: flex;
+    justify-content: center;
+    width: 100%;
 }
 .sv-me {
-    font-size: 14;
+    font-size: 14px;
     text-transform: uppercase;
     margin: 0 0 20px 0;
 }
 .funct {
-    margin: 20px 450px;
 }
 .text1 {
     width: 280px;
@@ -631,13 +536,13 @@ case-p {
     transform: scale(1.1);
 }
 
-
                                     /* block-map */
 
 .block-map {
     height: 350px;
     width: 100%;
-    text-align: center;
+    display: flex;
+    justify-content: center;
     line-height: 350px;
     color: #323e4f;
     font-size: 20px;
@@ -646,9 +551,12 @@ case-p {
                                     /* block-footer */
 
 .block-footer {
+    width: 100%;
     height: 90px;
     background-color: #354051;
     text-align: center;
+    position: absolute;
+    
 }
 .down {
     color: #fff;
