--- a/src/css/style-chern-hi.css
+++ b/src/css/style-chern-hi.css
@@ -1,11 +1,23 @@
 body {
-    font-family: Arial, sans-serif;
+    font-family: RushTurbo, sans-serif;
 }
 .ame {
     font-size: 22px;
     color: #263244;
     margin: 40px;
     text-transform: uppercase;
+}
+@font-face {
+    font-family: 'RushTurbo';
+    src: url('../fonts/RushTurbo.eot');
+    src: local('Rush Turbo'), local('RushTurbo'),
+        url('../fonts/RushTurbo.eot?#iefix') format('embedded-opentype'),
+        url('../fonts/RushTurbo.woff2') format('woff2'),
+        url('../fonts/RushTurbo.woff') format('woff'),
+        url('../fonts/RushTurbo.ttf') format('truetype');
+    font-weight: normal;
+    font-style: italic;
+    font-display: swap;
 }
 
 
